--- a/samples/shapes/train_shapes.ipynb
+++ b/samples/shapes/train_shapes.ipynb
@@ -78,31 +78,33 @@
      "text": [
       "\n",
       "Configurations:\n",
-      "BACKBONE_SHAPES                [[32 32]\n",
-      " [16 16]\n",
-      " [ 8  8]\n",
-      " [ 4  4]\n",
-      " [ 2  2]]\n",
+      "BACKBONE                       resnet101\n",
       "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
       "BATCH_SIZE                     8\n",
-      "BBOX_STD_DEV                   [ 0.1  0.1  0.2  0.2]\n",
+      "BBOX_STD_DEV                   [0.1 0.1 0.2 0.2]\n",
+      "COMPUTE_BACKBONE_SHAPE         None\n",
       "DETECTION_MAX_INSTANCES        100\n",
-      "DETECTION_MIN_CONFIDENCE       0.5\n",
+      "DETECTION_MIN_CONFIDENCE       0.7\n",
       "DETECTION_NMS_THRESHOLD        0.3\n",
+      "FPN_CLASSIF_FC_LAYERS_SIZE     1024\n",
       "GPU_COUNT                      1\n",
+      "GRADIENT_CLIP_NORM             5.0\n",
       "IMAGES_PER_GPU                 8\n",
       "IMAGE_MAX_DIM                  128\n",
+      "IMAGE_META_SIZE                16\n",
       "IMAGE_MIN_DIM                  128\n",
-      "IMAGE_PADDING                  True\n",
+      "IMAGE_MIN_SCALE                0\n",
+      "IMAGE_RESIZE_MODE              square\n",
       "IMAGE_SHAPE                    [128 128   3]\n",
       "LEARNING_MOMENTUM              0.9\n",
-      "LEARNING_RATE                  0.002\n",
+      "LEARNING_RATE                  0.001\n",
+      "LOSS_WEIGHTS                   {'mrcnn_bbox_loss': 1.0, 'rpn_class_loss': 1.0, 'mrcnn_class_loss': 1.0, 'mrcnn_mask_loss': 1.0, 'rpn_bbox_loss': 1.0}\n",
       "MASK_POOL_SIZE                 14\n",
       "MASK_SHAPE                     [28, 28]\n",
       "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 123.7  116.8  103.9]\n",
+      "MEAN_PIXEL                     [123.7 116.8 103.9]\n",
       "MINI_MASK_SHAPE                (56, 56)\n",
-      "NAME                           SHAPES\n",
+      "NAME                           shapes\n",
       "NUM_CLASSES                    4\n",
       "POOL_SIZE                      7\n",
       "POST_NMS_ROIS_INFERENCE        1000\n",
@@ -110,14 +112,17 @@
       "ROI_POSITIVE_RATIO             0.33\n",
       "RPN_ANCHOR_RATIOS              [0.5, 1, 2]\n",
       "RPN_ANCHOR_SCALES              (8, 16, 32, 64, 128)\n",
-      "RPN_ANCHOR_STRIDE              2\n",
-      "RPN_BBOX_STD_DEV               [ 0.1  0.1  0.2  0.2]\n",
+      "RPN_ANCHOR_STRIDE              1\n",
+      "RPN_BBOX_STD_DEV               [0.1 0.1 0.2 0.2]\n",
+      "RPN_NMS_THRESHOLD              0.7\n",
       "RPN_TRAIN_ANCHORS_PER_IMAGE    256\n",
       "STEPS_PER_EPOCH                100\n",
+      "TOP_DOWN_PYRAMID_SIZE          256\n",
+      "TRAIN_BN                       False\n",
       "TRAIN_ROIS_PER_IMAGE           32\n",
       "USE_MINI_MASK                  True\n",
       "USE_RPN_ROIS                   True\n",
-      "VALIDATION_STEPS               50\n",
+      "VALIDATION_STEPS               5\n",
       "WEIGHT_DECAY                   0.0001\n",
       "\n",
       "\n"
@@ -173,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_ax(rows=1, cols=1, size=8):\n",
@@ -1028,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
